fix(css) set display to none for footer and remove visibily for header

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -38,10 +38,12 @@ section.main>div {
 }
 
 /* HIDE STREAMLIT DEFAULTS */
-#MainMenu,
-footer,
-header {
-    visibility: hidden;
+#MainMenu {
+    display: none;
+}
+
+footer {
+    display: none;
 }
 
 /* TYPOGRAPHY */
